--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 body{
     background-color: cornsilk;
 }
+
+
+.subscribe{
+    color: blue;
+}
+
+label{
+    display: inline-block;
+    width: 100px;
+    
+}
